rollout-microservice/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cafe-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: 172.16.51.60.nip.io
      http:
        paths:
          - path: /()(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend-stable
                port:
                  number: 80

          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: api-gateway-stable
                port:
                  number: 8000
